--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.0.0",
+    "@stripe/stripe-js": "^1.49.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0"
   },
